@@ -61,7 +61,7 @@
                 </ng-template>
             </div>
             <div class="feature_container" *ngIf="store?.tags?.length || isEditing">
-                <h4 class="info__title d-flex align-items-center">Features<button class="ml-2 btn btn-sm btn-controller btn-edit" (click)="onEditTagsClicked.emit($event)"><span class="fas fa-edit"></span></button></h4>
+                <h4 class="info__title d-flex align-items-center">Features<button *ngIf="isEditing" class="ml-2 btn btn-sm btn-controller btn-edit" (click)="onEditTagsClicked.emit($event)"><span class="fas fa-edit"></span></button></h4>
                 <div *ngIf="store?.tags?.length; else noTagTemplate" class="px-2 pt-3">
                     <span class="badge mr-2 mb-1" style="color: #7f0000; background-color: #f7f7f7" *ngFor="let tag of store?.tags">{{ tag }}</span>
                 </div>
