@@ -133,7 +133,6 @@
         .menu-navigation-item {
             padding: .5rem 1rem;
             text-align: center;
-            font-weight: bold;
 
             &:hover {
                 background-color: #f7f7f7;
